--- a/views/index.ejs
+++ b/views/index.ejs
@@ -114,7 +114,7 @@
                         </button>
                     </li>
                     <li>
-                        <a class="btnMenu btn-cart" href="./cart.ejs"><i class="ri-shopping-cart-2-fill"></i>Carrito
+                        <a class="btnMenu btn-cart" href="../views/cart.ejs"><i class="ri-shopping-cart-2-fill"></i>Carrito
                             <span id="number" class="number">0</span>
                         </a>
                     </li>
