--- a/public/css/index.css
+++ b/public/css/index.css
@@ -52,6 +52,11 @@ a {
   color: var(--clr-mate);
 }
 
+button {
+  border: 0;
+  background-color: var(--clr-aside);
+}
+
 small {
   font-weight: bold;
 }
@@ -651,6 +656,7 @@ main {
 }
 
 .res-cart {
+  display: none;
   color: var(--clr-whiteish);
   cursor: pointer;
   padding: 5px;
@@ -846,23 +852,19 @@ main {
     right: 1rem;
   }
 
-  #res-cart {
-    display: none;
-  }
-
-  #res-cart.visible {
+  .res-cart.visible {
     display: block;
   }
 
   #go-back {
-    display: block;
+    display: none;
     color: var(--clr-mate);
     cursor: pointer;
     padding: 5px;
   }
 
   #go-back.visible {
-    display: none;
+    display: block;
   }
 
   /*--------------- NAVBAR RESPOSIVE ------------------*/
@@ -883,11 +885,6 @@ main {
 
   .show-menu {
     height: 246px;
-  }
-
-  nav ul li {
-    padding: 20px;
-    padding-top: 0;
   }
 
   .menu-line {
