--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -4,11 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css" integrity="sha512-OQDNdI5rpnZ0BRhhJc+btbbtnxaj+LdQFeh0V9/igiEPDiWE2fG+ZsXl0JEH+bjXKPJ3zcXqNyP4/F/NegVdZg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" type="text/css" href="./style/cart.css">
-    <link rel="stylesheet" type="text/css" href="./style/index.css">
-    <link rel="icon" href="./img/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css"
+        integrity="sha512-OQDNdI5rpnZ0BRhhJc+btbbtnxaj+LdQFeh0V9/igiEPDiWE2fG+ZsXl0JEH+bjXKPJ3zcXqNyP4/F/NegVdZg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" type="text/css" href="/css/index.css">
+    <link rel="stylesheet" type="text/css" href="/css/cart.css">
+    <link rel="icon" href="/images/favicon.png" type="image/x-icon">
 
     <title>Tienda online</title>
 </head>
@@ -16,9 +20,9 @@
 <body>
     <div class="wrapper">
         <header class="header-mobile">
-            <a href="./index.html">
-                <img class="logo" src="img/logo.png" alt="logo">
-            </a>
+            <button id="indexBtn">
+                <img class="logo" src="/images/logo.png" alt="logo">
+            </button>
             <nav class="menu-mobile" id="menu-mobile">
                 <ul>
                     <li class="menu-line">
@@ -57,10 +61,10 @@
                     </div>
                 </div>
 
-                <a href="./cart.html" class="res-cart" id="res-cart">
+                <button id="cartBtn" class="res-cart" id="res-cart">
                     <i class="ri-shopping-cart-2-fill"></i>
                     <span id="number2" class="res-number">0</span>
-                </a>
+                </button>
 
                 <button class="open-menu" id="open-menu">
                     <i class="ri-menu-line nav_burger"></i>
@@ -68,20 +72,33 @@
                 </button>
 
                 <div class="go-back" id="go-back">
-                    <a href="./index.html" class="a-back-arrow"><i class="ri-arrow-left-wide-line"></i>Atras</a>
+                    <button id="indexBtn" class="a-back-arrow">
+                        <i class="ri-arrow-left-wide-line"></i>
+                        Atras
+                    </button>
                 </div>
             </div>
         </header>
         <aside>
             <header>
-                <a href="./index.html">
-                    <img class="logo" src="img/logo.png" alt="logo">
-                </a>
+                <button id="indexBtn">
+                    <img class="logo" src="/images/logo.png" alt="logo">
+                </button>
             </header>
             <nav>
                 <ul class="menu">
-                    <li><a class="btnMenu btn-category" href="./index.html"><i class="ri-arrow-left-wide-line"></i>Seguir comprando</a></li>
-                    <li><a class="btnMenu active" href="#"><i class="ri-shopping-cart-2-fill"></i>Carrito</a></li>
+                    <li>
+                        <button class="btnMenu btn-category" id="indexBtn">
+                            <i class="ri-arrow-left-wide-line"></i>
+                            Seguir comprando
+                        </button>
+                    </li>
+                    <li>
+                        <button class="btnMenu active">
+                            <i class="ri-shopping-cart-2-fill"></i>
+                            Carrito
+                        </button>
+                    </li>
                 </ul>
             </nav>
             <footer class="text-footer"> <!-- JS --> </footer>
@@ -110,7 +127,8 @@
                     </div>
                 </div>
 
-                <p id="bought-cart" class="bought-cart disabled">Muchas gracias por su compra. <i class="far fa-laugh-beam"></i></p>
+                <p id="bought-cart" class="bought-cart disabled">Muchas gracias por su compra. <i
+                        class="far fa-laugh-beam"></i></p>
 
             </div>
         </main>
@@ -118,7 +136,7 @@
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="./js/cart.js"></script>
+    <script src="/scripts/cart.js"></script>
 </body>
 
 </html>
