--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -108,7 +108,10 @@
                 <h2 class="cart-main-title">Carrito</h2>
             </div>
             <div class="container-cart">
-                <p id="empty-comment" class="empty-comment">El carrito esta vacío. <i class="far fa-frown-open"></i></p>
+                <p id="empty-comment" class="empty-comment">
+                    El carrito esta vacío.
+                    <i class="far fa-frown-open"></i>
+                </p>
 
                 <div id="cart-products" class="cart-products disabled">
                     <!-- JS -->
@@ -116,25 +119,28 @@
 
                 <div id="cart-actions" class="cart-actions disabled">
                     <div class="cart-actions-left">
-                        <button id="btn-cart-empty" class="btn btn-cart-empty">Vaciar carrito</button>
+                        <button id="btn-cart-empty" class="btn btn-cart-empty">
+                            Vaciar carrito
+                        </button>
                     </div>
                     <div class="cart-actions-right">
                         <div class="cart-total">
                             <p>Total:</p>
                             <p id="total">₡ 0</p>
                         </div>
-                        <button id="btn-cart-buy" class="btn btn-cart-buy">Comprar ahora</button>
+                        <button id="btn-cart-buy" class="btn btn-cart-buy">
+                            Comprar ahora
+                        </button>
                     </div>
                 </div>
-
-                <p id="bought-cart" class="bought-cart disabled">Muchas gracias por su compra. <i
-                        class="far fa-laugh-beam"></i></p>
-
+                <p id="bought-cart" class="bought-cart disabled">
+                    Muchas gracias por su compra.
+                    <i class="far fa-laugh-beam"></i>
+                </p>
             </div>
         </main>
     </div>
 
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/scripts/cart.js"></script>
 </body>
