--- a/views/index.ejs
+++ b/views/index.ejs
@@ -134,7 +134,7 @@
                     <input type="text" class="input" placeholder="Buscar.." id="input" />
                 </div>
             </div>
-            <p id="empty-ccomment" class="empty-comment disabled">No se encontró ningun producto.</p>
+            <p id="empty-comment" class="empty-comment disabled">No se encontró ningun producto.</p>
             <button class="go-top-btn">
                 <i class="ri-arrow-up-line"></i>
             </button>
