--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -71,8 +71,8 @@
                     <i class="ri-close-large-fill nav_close"></i>
                 </button>
 
-                <div class="go-back" id="go-back">
-                    <button id="indexBtn" class="a-back-arrow">
+                <div class="go-back2" id="go-back">
+                    <button id="indexBtn" class="a-back-arrow2">
                         <i class="ri-arrow-left-wide-line"></i>
                         Atras
                     </button>
