--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -72,9 +72,9 @@
                 </button>
 
                 <div class="go-back2" id="go-back">
-                    <button id="indexBtn" class="a-back-arrow2">
+                    <button id="indexBtn" class="a-back-arrow">
                         <i class="ri-arrow-left-wide-line"></i>
-                        Atras
+                        ATRAS
                     </button>
                 </div>
             </div>
