--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -14,13 +14,9 @@
 }
 
 .go-back2 {
+  padding: 0 5px 0 0 !important;
   border: 1px solid var(--clr-whiteish);
   border-radius: var(--b-radius-xs);
-}
-
-.a-back-arrow2 {
-  color: var(--clr-whiteish);
-  font-size: 1rem;
 }
 
 .cart-products {
