--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -72,7 +72,7 @@
                 </button>
 
                 <div class="go-back2" id="go-back">
-                    <button id="indexBtn" class="a-back-arrow">
+                    <button id="indexBtn" class="a-back-arrow2">
                         <i class="ri-arrow-left-wide-line"></i>
                         ATRAS
                     </button>
