--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -14,9 +14,14 @@
 }
 
 .go-back2 {
-  padding: 0 5px 0 0 !important;
+  padding-left: 0 !important;
   border: 1px solid var(--clr-whiteish);
   border-radius: var(--b-radius-xs);
+}
+
+.a-back-arrow2 {
+  color: var(--clr-whiteish);
+  font-size: 0.9rem;
 }
 
 .cart-products {
