--- a/public/css/index.css
+++ b/public/css/index.css
@@ -887,6 +887,10 @@ main {
     transition: 0.4s ease-in-out;
   }
 
+  .no-scroll {
+    overflow: hidden;
+  }
+
   .show-menu {
     height: 246px;
   }
