--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -109,7 +109,7 @@
             </div>
             <div class="container-cart">
                 <p id="empty-comment" class="empty-comment">
-                    El carrito esta vacío.
+                    El carrito está vacío.
                     <i class="far fa-frown-open"></i>
                 </p>
 
