--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css"
         integrity="sha512-OQDNdI5rpnZ0BRhhJc+btbbtnxaj+LdQFeh0V9/igiEPDiWE2fG+ZsXl0JEH+bjXKPJ3zcXqNyP4/F/NegVdZg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -13,7 +14,8 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" type="text/css" href="/css/index.css">
     <link rel="stylesheet" type="text/css" href="/css/cart.css">
-    <link rel="icon" href="/images/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="/css/sweetAlert.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <title>Tienda online</title>
 </head>
@@ -141,10 +143,8 @@
             <div class="productContainer" id="productContainer">
                 <!-- JS -->
             </div>
-            <div class="modal-overlay" id="modalOverlay">
-                <div class="modal-content" id="modal-content">
-                    <!-- JS -->
-                </div>
+            <div class="modal-content">
+                <!-- JS -->
             </div>
         </main>
     </div>
