--- a/public/css/index.css
+++ b/public/css/index.css
@@ -8,8 +8,7 @@
   --clr-green: #2a8851;
   --clr-mate: #232523;
   --clr-blue: #6574b1;
-  --clr-main: #fff;
-  --clr-white: #ececec;
+  --clr-white: #fff;
   --clr-whiteish: #fefefc;
   --clr-gray: #e2e2e2;
   --b-round: 50%;
@@ -217,10 +216,15 @@ aside {
 }
 
 .number {
-  background-color: var(--clr-orange);
+  background-color: var(--clr-white);
   color: var(--clr-aside);
   padding: 0.15rem 0.25rem;
   border-radius: 0.25rem;
+  outline: 0;
+  border: 0;
+  white-space: nowrap;
+  box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.35),
+    inset 0px 2px 1px 0px rgba(255, 255, 255, 0.35);
 }
 
 .res-number {
@@ -237,6 +241,11 @@ aside {
   border-radius: var(--b-round);
   background-color: var(--clr-orange);
   color: var(--clr-aside);
+  outline: 0;
+  border: 0;
+  white-space: nowrap;
+  box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.35),
+    inset 0px 2px 1px 0px rgba(255, 255, 255, 0.35);
   z-index: 5;
 }
 
@@ -277,8 +286,6 @@ main {
 .product {
   border-radius: var(--b-radius);
   border: 1px solid var(--clr-mate);
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
-    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
   cursor: pointer;
 }
 
@@ -299,7 +306,6 @@ main {
 
 .producto-detalles {
   width: 100%;
-  background: var(--clr-shine-aside);
   color: var(--clr-white);
   padding: 0.8rem;
   border-bottom-left-radius: 0.37rem;
@@ -308,6 +314,37 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  outline: 0;
+  border: 0;
+  white-space: nowrap;
+  text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.5);
+  background-image: -moz-linear-gradient(
+      top,
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 0.35)
+    ),
+    url("/images/bg02.webp");
+  background-image: -webkit-linear-gradient(
+      top,
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 0.35)
+    ),
+    url("/images/bg02.webp");
+  background-image: -ms-linear-gradient(
+      top,
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 0.35)
+    ),
+    url("/images/bg02.webp");
+  background-image: linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.35)),
+    url("/images/bg02.webp");
+  box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.35),
+    inset 0px 2px 1px 0px rgba(255, 255, 255, 0.35);
+  transition: background-color 0.2s ease-in-out;
+  -moz-transition: background-color 0.2s ease-in-out;
+  -webkit-transition: background-color 0.2s ease-in-out;
+  -ms-transition: background-color 0.2s ease-in-out;
+  background: var(--clr-shine-aside);
   gap: 0.25rem;
   cursor: pointer;
 }
@@ -382,10 +419,70 @@ main {
 }
 
 .btn.btn-cart-empty {
+  outline: 0;
+  border: 0;
+  white-space: nowrap;
+  text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.5);
+  background-image: -moz-linear-gradient(
+      top,
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 0.35)
+    ),
+    url("/images/bg02.webp");
+  background-image: -webkit-linear-gradient(
+      top,
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 0.35)
+    ),
+    url("/images/bg02.webp");
+  background-image: -ms-linear-gradient(
+      top,
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 0.35)
+    ),
+    url("/images/bg02.webp");
+  background-image: linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.35)),
+    url("/images/bg02.webp");
+  box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.35),
+    inset 0px 2px 1px 0px rgba(255, 255, 255, 0.35);
+  transition: background-color 0.2s ease-in-out;
+  -moz-transition: background-color 0.2s ease-in-out;
+  -webkit-transition: background-color 0.2s ease-in-out;
+  -ms-transition: background-color 0.2s ease-in-out;
   background: var(--clr-shine-red);
 }
 
 .btn.btn-cart-buy {
+  outline: 0;
+  border: 0;
+  white-space: nowrap;
+  text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.5);
+  background-image: -moz-linear-gradient(
+      top,
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 0.35)
+    ),
+    url("/images/bg02.webp");
+  background-image: -webkit-linear-gradient(
+      top,
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 0.35)
+    ),
+    url("/images/bg02.webp");
+  background-image: -ms-linear-gradient(
+      top,
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 0.35)
+    ),
+    url("/images/bg02.webp");
+  background-image: linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.35)),
+    url("/images/bg02.webp");
+  box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.35),
+    inset 0px 2px 1px 0px rgba(255, 255, 255, 0.35);
+  transition: background-color 0.2s ease-in-out;
+  -moz-transition: background-color 0.2s ease-in-out;
+  -webkit-transition: background-color 0.2s ease-in-out;
+  -ms-transition: background-color 0.2s ease-in-out;
   background: var(--clr-shine-aside);
   border-top-left-radius: 0;
   border-top-right-radius: 0;
@@ -401,12 +498,17 @@ main {
 
 .cart-total {
   display: flex;
-  background-color: var(--clr-gray);
   font-size: 0.9rem;
   padding: 0.6rem;
   padding-right: 0.7rem;
   color: var(--clr-mate);
   text-transform: uppercase;
+  outline: 0;
+  border: 0;
+  white-space: nowrap;
+  box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.35),
+    inset 0px 2px 1px 0px rgba(255, 255, 255, 0.35);
+  background-color: var(--clr-gray);
   border-top-left-radius: var(--b-radius);
   border-top-right-radius: var(--b-radius);
   gap: 0.5rem;
@@ -480,7 +582,7 @@ main {
 
 .res-search-box input::placeholder {
   font-size: 0.8rem;
-  color: var(--clr-main);
+  color: var(--clr-white);
 }
 
 .res-search-box input.slide {
@@ -615,36 +717,4 @@ main {
   }
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /*--------------------- MODAL POP-UP -----------------*/
-
-
-
-
-
-
-
-
